--- a/firewall/po/zh/untangle-node-firewall.po
+++ b/firewall/po/zh/untangle-node-firewall.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-11-21 14:15-0800\n"
-"PO-Revision-Date: 2008-11-21 17:15-0800\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2008-11-27 21:30-0500\n"
+"Last-Translator: Jie Zhu <j.zhu@impactek.com>\n"
 "Language-Team: Chinese <j.zhu@impactek.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -57,11 +57,11 @@ msgstr "描述"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:182
 msgid "Warning"
-msgstr ""
+msgstr "警告"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:182
 msgid "The form is not valid!"
-msgstr ""
+msgstr "表单无效！"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:193
 msgid "Enable Rule"
@@ -76,7 +76,6 @@ msgid "Log"
 msgstr "日志"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:226
-#, fuzzy
 msgid "Rule"
 msgstr "规则"
 
@@ -137,9 +136,8 @@ msgid "reason for action"
 msgstr "动作原因"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:364
-#, fuzzy
 msgid "rule #{0}"
-msgstr "规则#"
+msgstr "规则#{0}"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:367
 msgid "server"
@@ -179,32 +177,31 @@ msgstr "请等候"
 
 #: ../impl/com/untangle/node/firewall/FirewallAllFilter.java:27
 msgid "Firewall Events"
-msgstr ""
+msgstr "防火墙事件"
 
 #: ../impl/com/untangle/node/firewall/FirewallBlockedFilter.java:27
 msgid "Firewall Block Events"
-msgstr ""
+msgstr "防火墙阻止事件"
 
 #: ../impl/com/untangle/node/firewall/FirewallImpl.java:93
-#, fuzzy
 msgid "Sessions blocked"
-msgstr "已阻止"
+msgstr "已阻止的会话"
 
 #: ../impl/com/untangle/node/firewall/FirewallImpl.java:93
 msgid "BLOCK"
-msgstr ""
+msgstr "阻止"
 
 #: ../impl/com/untangle/node/firewall/FirewallImpl.java:94
 msgid "Sessions passed"
-msgstr ""
+msgstr "已通过的会话"
 
 #: ../impl/com/untangle/node/firewall/FirewallImpl.java:94
 msgid "PASS"
-msgstr ""
+msgstr "通过"
 
 #: ../impl/com/untangle/node/firewall/FirewallImpl.java:95
 msgid "Sessions logged"
-msgstr ""
+msgstr "已记录的会话"
 
 #~ msgid "Category"
 #~ msgstr "分类"
