--- a/ips/po/zh/untangle-node-ips.po
+++ b/ips/po/zh/untangle-node-ips.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-11-10 11:22-0800\n"
-"PO-Revision-Date: 2008-11-21 17:15-0800\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2008-11-27 21:27-0500\n"
+"Last-Translator: Jie Zhu <j.zhu@impactek.com>\n"
 "Language-Team: Chinese <j.zhu@impactek.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -178,35 +178,35 @@ msgstr "请等待"
 
 #: ../impl/com/untangle/node/ips/IpsBlockedFilter.java:27
 msgid "Blocked Events"
-msgstr ""
+msgstr "已阻止的事件"
 
 #: ../impl/com/untangle/node/ips/IpsLogFilter.java:27
 msgid "All Events"
-msgstr ""
+msgstr "所有事件"
 
 #: ../impl/com/untangle/node/ips/IpsNodeImpl.java:97
 msgid "Sessions scanned"
-msgstr ""
+msgstr "已扫描的会话"
 
 #: ../impl/com/untangle/node/ips/IpsNodeImpl.java:97
 msgid "SCAN"
-msgstr ""
+msgstr "扫描"
 
 #: ../impl/com/untangle/node/ips/IpsNodeImpl.java:98
 msgid "Sessions logged"
-msgstr ""
+msgstr "已记录的会话"
 
 #: ../impl/com/untangle/node/ips/IpsNodeImpl.java:98
 msgid "DETECT"
-msgstr ""
+msgstr "探测"
 
 #: ../impl/com/untangle/node/ips/IpsNodeImpl.java:99
 msgid "Sessions blocked"
-msgstr ""
+msgstr "已阻止的会话"
 
 #: ../impl/com/untangle/node/ips/IpsNodeImpl.java:99
 msgid "BLOCK"
-msgstr ""
+msgstr "阻止"
 
 #~ msgid "Failed"
 #~ msgstr "失败"
