--- a/mail-casing/po/zh/untangle-casing-mail.po
+++ b/mail-casing/po/zh/untangle-casing-mail.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-11-21 14:15-0800\n"
-"PO-Revision-Date: 2008-11-21 17:11-0800\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2008-11-27 23:32-0500\n"
+"Last-Translator: Jie Zhu <j.zhu@impactek.com>\n"
 "Language-Team: Chinese <j.zhu@impactek.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -21,7 +21,7 @@ msgstr ""
 
 #: ../servlets/quarantine/root/quarantine.js:126
 msgid "The account {0} doesn't have any quarantined messages."
-msgstr ""
+msgstr "账户{0}没有任何被隔离的邮件。"
 
 #: ../servlets/quarantine/root/quarantine.js:176
 #: ../servlets/quarantine/root/quarantine.js:324
@@ -92,7 +92,7 @@ msgstr "来至"
 
 #: ../servlets/quarantine/root/quarantine.js:465
 msgid "Number of Attachments in the email."
-msgstr ""
+msgstr "电子邮件中的附件数。"
 
 #: ../servlets/quarantine/root/quarantine.js:468
 msgid "Score"
@@ -115,13 +115,12 @@ msgid "Showing items {0} - {1} of {2}"
 msgstr "正在显示{0}项 - {2}中的第{1}"
 
 #: ../servlets/quarantine/root/quarantine.js:503
-#, fuzzy
 msgid "No messages to display"
-msgstr "没有邮件显示"
+msgstr "没有可显示邮件"
 
 #: ../servlets/quarantine/root/quarantine.js:574
 msgid "Your Remote Access Portal login has been configured without an email address or with an incorrect email address."
-msgstr ""
+msgstr "您远程访问门户的登录没有配置电子邮件地址或是一个不正确的电子邮件地址。"
 
 #: ../servlets/quarantine/root/quarantine.js:579
 msgid "Quarantined Messages"
@@ -198,15 +197,15 @@ msgstr "删除{0}个地址"
 
 #: ../servlets/quarantine/root/request.js:21
 msgid "Your Remote Access Portal login is not configured with a valid email address."
-msgstr ""
+msgstr "您远程访问门户的登录没有配置有效的电子邮件地址。"
 
 #: ../servlets/quarantine/root/request.js:31
 msgid "Select User"
-msgstr ""
+msgstr "选择用户"
 
 #: ../servlets/quarantine/root/request.js:31
 msgid "Enter the email address for which you would like the Quarantine Digest"
-msgstr ""
+msgstr "输入您希望隔离摘要发送的电子邮件地址"
 
 #: ../servlets/quarantine/root/request.js:35
 msgid "Request"
@@ -241,9 +240,8 @@ msgid "Delete one Address"
 msgstr "删除一个地址"
 
 #: ../servlets/quarantine/root/inbox.jspx:34
-#, fuzzy
 msgid "Quarantine Digest for: {0}"
-msgstr "隔离摘要为："
+msgstr "隔离摘要为：{0}"
 
 #: ../servlets/quarantine/root/inbox.jspx:39
 msgid "{0} | Quarantine Digest for: {1}"
