--- a/phish/po/zh/untangle-node-phish.po
+++ b/phish/po/zh/untangle-node-phish.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-11-21 14:15-0800\n"
-"PO-Revision-Date: 2008-11-21 17:17-0800\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2008-11-21 22:34-0500\n"
+"Last-Translator: Jie Zhu <j.zhu@impactek.com>\n"
 "Language-Team: Chinese <j.zhu@impactek.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -178,7 +178,7 @@ msgstr "请等候"
 #: ../servlets/idblocker/src/com/untangle/node/phish/BlockPageServlet.java:65
 #: ../servlets/idblocker/src/com/untangle/node/phish/BlockPageServlet.java:74
 msgid "Feature is not installed."
-msgstr ""
+msgstr "功能尚未安装。"
 
 #: ../servlets/idblocker/src/com/untangle/node/phish/BlockPageServlet.java:105
 #, java-format
@@ -202,35 +202,35 @@ msgstr "如果您有任何问题，请联系{0}。"
 
 #: ../../spam-base/impl/com/untangle/node/spam/SpamAllFilter.java:27
 msgid "All Events"
-msgstr ""
+msgstr "所有事件"
 
 #: ../../spam-base/impl/com/untangle/node/spam/SpamLogFilter.java:27
 msgid "POP/IMAP Events"
-msgstr ""
+msgstr "POP/IMAP事件"
 
 #: ../../spam-base/impl/com/untangle/node/spam/SpamSmtpFilter.java:27
 msgid "SMTP Events"
-msgstr ""
+msgstr "SMTP事件"
 
 #: ../../spam-base/impl/com/untangle/node/spam/SpamSpamFilter.java:27
 msgid "Spam Events"
-msgstr ""
+msgstr "垃圾信息事件"
 
 #: ../../spam-base/impl/com/untangle/node/spam/SpamSpamFilter.java:29
 msgid "Identity Theft Events"
-msgstr ""
+msgstr "身份偷窃事件"
 
 #: ../impl/com/untangle/node/phish/PhishHttpAllFilter.java:38
 msgid "All Phish HTTP Traffic"
-msgstr ""
+msgstr "所有的钓鱼HTTP流量"
 
 #: ../impl/com/untangle/node/phish/PhishHttpBlockedFilter.java:27
 msgid "Blocked Phish HTTP Traffic"
-msgstr ""
+msgstr "已阻止的钓鱼HTTP流量"
 
 #: ../impl/com/untangle/node/phish/PhishHttpPassedFilter.java:38
 msgid "Passed Phish HTTP Traffic"
-msgstr ""
+msgstr "已通过的钓鱼HTTP流量"
 
 #: ../../uvm-lib/servlets/blockpage/root/blockpage_template.jspx:48
 msgid "Host:"
