--- a/protofilter/po/zh/untangle-node-protofilter.po
+++ b/protofilter/po/zh/untangle-node-protofilter.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-11-10 11:22-0800\n"
-"PO-Revision-Date: 2008-11-21 17:19-0800\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2008-11-21 22:29-0500\n"
+"Last-Translator: Jie Zhu <j.zhu@impactek.com>\n"
 "Language-Team: Chinese <j.zhu@impactek.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -84,86 +84,84 @@ msgid "Signature"
 msgstr "签名"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-protofilter/settings.js:144
-#, fuzzy
 msgid "blocked"
-msgstr "阻止"
+msgstr "已阻止"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-protofilter/settings.js:144
 msgid "passed"
-msgstr ""
+msgstr "已通过"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-protofilter/settings.js:147
 msgid "blocked in block list"
-msgstr ""
+msgstr "在阻止列表中已阻止的"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-protofilter/settings.js:147
 msgid "not blocked in block list"
-msgstr ""
+msgstr "在阻止列表中未阻止的"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-protofilter/settings.js:178
 msgid "timestamp"
-msgstr ""
+msgstr "时间戳"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-protofilter/settings.js:186
 msgid "action"
-msgstr ""
+msgstr "动作"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-protofilter/settings.js:191
 msgid "client"
-msgstr ""
+msgstr "客户端"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-protofilter/settings.js:197
 msgid "request"
-msgstr ""
+msgstr "请求"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-protofilter/settings.js:202
 msgid "reason for action"
-msgstr ""
+msgstr "动作原因"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-protofilter/settings.js:207
 msgid "server"
-msgstr ""
+msgstr "服务器"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-protofilter/settings.js:217
 msgid "Saving..."
-msgstr "正在保存。。。"
+msgstr "正在保存..."
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-protofilter/settings.js:217
 msgid "Please wait"
 msgstr "请等待"
 
 #: ../impl/com/untangle/node/protofilter/ProtoFilterAllFilter.java:27
-#, fuzzy
 msgid "Protocol Events"
-msgstr "协议列表"
+msgstr "协议事件"
 
 #: ../impl/com/untangle/node/protofilter/ProtoFilterBlockedFilter.java:27
 msgid "Blocked Protocol Events"
-msgstr ""
+msgstr "已阻止协议事件"
 
 #: ../impl/com/untangle/node/protofilter/ProtoFilterImpl.java:90
 msgid "Sessions scanned"
-msgstr ""
+msgstr "已扫描会话"
 
 #: ../impl/com/untangle/node/protofilter/ProtoFilterImpl.java:90
 msgid "SCAN"
-msgstr ""
+msgstr "扫描"
 
 #: ../impl/com/untangle/node/protofilter/ProtoFilterImpl.java:91
 msgid "Sessions blocked"
-msgstr ""
+msgstr "已阻止会话"
 
 #: ../impl/com/untangle/node/protofilter/ProtoFilterImpl.java:91
 msgid "BLOCK"
-msgstr ""
+msgstr "阻止"
 
 #: ../impl/com/untangle/node/protofilter/ProtoFilterImpl.java:92
 msgid "Sessions logged"
-msgstr ""
+msgstr "已记录会话"
 
 #: ../impl/com/untangle/node/protofilter/ProtoFilterImpl.java:92
 msgid "DETECT"
-msgstr ""
+msgstr "检测"
 
 #~ msgid "signature"
 #~ msgstr "签名"
