--- a/reporting/po/zh/untangle-node-reporting.po
+++ b/reporting/po/zh/untangle-node-reporting.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-11-04 11:30-0800\n"
-"PO-Revision-Date: 2008-11-21 17:19-0800\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2008-11-21 22:24-0500\n"
+"Last-Translator: Jie Zhu <j.zhu@impactek.com>\n"
 "Language-Team: Chinese <j.zhu@impactek.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -32,7 +32,7 @@ msgstr "查看报告"
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:88
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:105
 msgid "Archived Reports"
-msgstr "存档的报告"
+msgstr "已存档的报告"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:175
 msgid "Generation"
@@ -166,7 +166,6 @@ msgid "Keep One Week's Data"
 msgstr "保持一周的数据"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:430
-#, fuzzy
 msgid "IP Addresses"
 msgstr "IP地址"
 
@@ -208,7 +207,7 @@ msgstr "失败"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:535
 msgid "Saving..."
-msgstr "正在保存。。。"
+msgstr "正在保存..."
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-reporting/settings.js:535
 msgid "Please wait"
