--- a/shield/po/zh/untangle-node-shield.po
+++ b/shield/po/zh/untangle-node-shield.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-11-10 11:22-0800\n"
-"PO-Revision-Date: 2008-11-21 17:20-0800\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2008-11-21 22:22-0500\n"
+"Last-Translator: Jie Zhu <j.zhu@impactek.com>\n"
 "Language-Team: Chinese <j.zhu@impactek.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -70,7 +70,6 @@ msgid "address"
 msgstr "地址"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:111
-#, fuzzy
 msgid "user count"
 msgstr "用户计数"
 
@@ -103,9 +102,8 @@ msgid "source"
 msgstr "源"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:227
-#, fuzzy
 msgid "source interface"
-msgstr "接口"
+msgstr "源接口"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:232
 msgid "reputation"
@@ -125,7 +123,7 @@ msgstr "拒绝"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:271
 msgid "Saving..."
-msgstr "正在保存。。。"
+msgstr "正在保存..."
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:271
 msgid "Please wait"
@@ -133,7 +131,7 @@ msgstr "请等待"
 
 #: ../impl/com/untangle/node/shield/LogIteration.java:194
 msgid "type"
-msgstr ""
+msgstr "类型"
 
 #~ msgid "user"
 #~ msgstr "用户"
