--- a/spyware/po/zh/untangle-node-spyware.po
+++ b/spyware/po/zh/untangle-node-spyware.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-11-21 14:15-0800\n"
-"PO-Revision-Date: 2008-11-21 17:20-0800\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2008-11-21 22:13-0500\n"
+"Last-Translator: Jie Zhu <j.zhu@impactek.com>\n"
 "Language-Team: Chinese <j.zhu@impactek.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -32,7 +32,7 @@ msgstr "互联网(Web)"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spyware/settings.js:44
 msgid "Block Spyware & Ad URLs"
-msgstr ""
+msgstr "阻止间谍软件和广告链接"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spyware/settings.js:59
 msgid "User Bypass"
@@ -56,7 +56,7 @@ msgstr "用户信息脚本(Cookies)"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spyware/settings.js:83
 msgid "Block Tracking & Ad Cookies"
-msgstr ""
+msgstr "阻止跟踪和广告Cookies"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spyware/settings.js:97
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spyware/settings.js:133
@@ -70,11 +70,11 @@ msgstr "ActiveX"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spyware/settings.js:106
 msgid "Block Malware ActiveX Installs"
-msgstr ""
+msgstr "阻止恶意ActiveX安装"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spyware/settings.js:119
 msgid "Block All ActiveX"
-msgstr ""
+msgstr "阻止所有ActiveX"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spyware/settings.js:139
 msgid "Traffic"
@@ -82,7 +82,7 @@ msgstr "数据流量"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spyware/settings.js:142
 msgid "Monitor Suspicious Traffic"
-msgstr ""
+msgstr "监视可疑流量"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spyware/settings.js:163
 msgid "Spyware Blocker signatures were last updated"
@@ -212,47 +212,44 @@ msgid "Description"
 msgstr "描述"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spyware/settings.js:588
-#, fuzzy
 msgid "in Subnet List"
-msgstr "子网列表"
+msgstr "在子网列表中"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spyware/settings.js:591
-#, fuzzy
 msgid "in ActiveX List"
-msgstr "ActiveX列表"
+msgstr "在ActiveX列表中"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spyware/settings.js:594
 msgid "in URL List"
-msgstr ""
+msgstr "在URL列表中"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spyware/settings.js:597
-#, fuzzy
 msgid "in Cookie List"
-msgstr "Cookies列表"
+msgstr "在Cookies列表中"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spyware/settings.js:604
 msgid "timestamp"
-msgstr ""
+msgstr "时间戳"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spyware/settings.js:612
 msgid "action"
-msgstr ""
+msgstr "动作"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spyware/settings.js:617
 msgid "client"
-msgstr ""
+msgstr "客户端"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spyware/settings.js:624
 msgid "request"
-msgstr ""
+msgstr "请求"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spyware/settings.js:629
 msgid "reason for action"
-msgstr ""
+msgstr "动作原因"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spyware/settings.js:634
 msgid "server"
-msgstr ""
+msgstr "服务器"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spyware/settings.js:707
 msgid "Invalid subnet specified"
@@ -277,11 +274,11 @@ msgstr "请等待"
 #: ../servlets/spyware/src/com/untangle/node/spyware/BlockPageServlet.java:58
 #: ../servlets/spyware/src/com/untangle/node/spyware/BlockPageServlet.java:69
 msgid "Feature is not installed."
-msgstr ""
+msgstr "功能尚未安装。"
 
 #: ../servlets/spyware/src/com/untangle/node/spyware/BlockPageServlet.java:78
 msgid "This request has expired."
-msgstr ""
+msgstr "该请求已失效。"
 
 #: ../servlets/spyware/src/com/untangle/node/spyware/BlockPageServlet.java:108
 #, java-format
@@ -305,54 +302,51 @@ msgstr "如果您有任何问题，请联系{0}。"
 
 #: ../impl/com/untangle/node/spyware/SpywareAccessFilter.java:27
 msgid "Access Events"
-msgstr ""
+msgstr "访问事件"
 
 #: ../impl/com/untangle/node/spyware/SpywareActiveXFilter.java:27
-#, fuzzy
 msgid "ActiveX Events"
-msgstr "ActiveX列表"
+msgstr "ActiveX事件"
 
 #: ../impl/com/untangle/node/spyware/SpywareAllFilter.java:27
 msgid "All Events"
-msgstr ""
+msgstr "所有事件"
 
 #: ../impl/com/untangle/node/spyware/SpywareBlacklistFilter.java:27
 msgid "Blacklist Events"
-msgstr ""
+msgstr "黑名单事件"
 
 #: ../impl/com/untangle/node/spyware/SpywareBlockedFilter.java:27
-#, fuzzy
 msgid "Blocked Events"
-msgstr "阻止列表"
+msgstr "已阻止事件"
 
 #: ../impl/com/untangle/node/spyware/SpywareCookieFilter.java:27
-#, fuzzy
 msgid "Cookie Events"
-msgstr "用户信息脚本(Cookies)"
+msgstr "Cookies事件"
 
 #: ../impl/com/untangle/node/spyware/SpywareImpl.java:213
 msgid "Pages scanned"
-msgstr ""
+msgstr "已扫描页面"
 
 #: ../impl/com/untangle/node/spyware/SpywareImpl.java:213
 msgid "SCAN"
-msgstr ""
+msgstr "扫描"
 
 #: ../impl/com/untangle/node/spyware/SpywareImpl.java:214
 msgid "Pages blocked"
-msgstr ""
+msgstr "已阻止页面"
 
 #: ../impl/com/untangle/node/spyware/SpywareImpl.java:214
 msgid "BLOCK"
-msgstr ""
+msgstr "阻止"
 
 #: ../impl/com/untangle/node/spyware/SpywareImpl.java:215
 msgid "Pages passed"
-msgstr ""
+msgstr "已通过页面"
 
 #: ../impl/com/untangle/node/spyware/SpywareImpl.java:215
 msgid "PASS"
-msgstr ""
+msgstr "通过"
 
 #: ../../uvm-lib/servlets/blockpage/root/blockpage_template.jspx:48
 msgid "Host:"
